--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
 @media only screen and (max-width: 481px) {
+
+    .index {
+      border: 1px solid grey;
+      width: 320px;
+      height: 275px;
+    }
     .index .description {
       display: none;
+    }
+
+    img {
+      width: 300px;
+      height: 198px;
     }
 }
