--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,59 @@
+body {
+  font-family: Arial;
+  margin: 0px;
+}
 @media only screen and (max-width: 481px) {
 
-    .index {
-      border: 1px solid grey;
-      width: 320px;
-      height: 275px;
-    }
-    .index .description {
-      display: none;
-    }
+  .playlist-text {
+    margin-left: 9px;
+    margin-top: 10px;
+    width: 280px;
+    height: 29px;
+    font-family: 'Helvetica Bold', 'Helvetica';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 24px;
+    color: #5E5E5E;
+  }
 
-    img {
-      width: 300px;
-      height: 198px;
-    }
+  .index {
+    border: 1px solid LightGrey;
+    width: 320px;
+    height: 275px;
+    margin-bottom: 10px;
+  }
+  .index .description {
+    display: none;
+  }
+
+  img {
+    width: 300px;
+    height: 198px;
+    margin-left: 9px;
+  }
+
+  .title {
+    margin-left: 9px;
+    width: 300px;
+    height: 17px;
+    font-family: 'Arial Bold', 'Arial';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 18px;
+    color: #5E5E5E;
+    line-height: 20px;
+  }
+
+  .published {
+    margin-left: 9px;
+    width: 280px;
+    height: 8px;
+    font-family: 'Arial Bold', 'Arial';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 15px;
+    color: #868686;
+    line-height: 5px;
+  }
+}
 }
