--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,23 @@ body {
   margin: 0px;
 }
 
+button {
+  margin-left: 18px;
+  text-decoration: underline;
+  border: none;
+  background: none;
+  margin-top: 12px;
+  height: 26px;
+  font-family: 'Arial Bold', 'Arial';
+  font-weight: 700;
+  font-style: normal;
+  font-size: 15px;
+  text-decoration: underline;
+  color: #868686;
+  line-height: 26px;
+}
+
+
 @media only screen and (max-width: 481px) {
 
   .playlist-text {
@@ -92,20 +109,9 @@ body {
     line-height: 26px;
   }
 
-  button {
-    margin-left: 18px;
-    text-decoration: underline;
-    border: none;
-    background: none;
-    margin-top: 12px;
-    height: 26px;
-    font-family: 'Arial Bold', 'Arial';
-    font-weight: 700;
-    font-style: normal;
-    font-size: 15px;
-    text-decoration: underline;
-    color: #868686;
-    line-height: 26px;
+  .show iframe {
+    width: 90%;
+    height: 200px;
   }
 }
 
@@ -139,13 +145,13 @@ body {
 
   .list .title {
     width: 100%;
-    height: 15px;
+    height: 18px;
     font-family: 'Helvetica Bold', 'Helvetica';
     font-weight: 700;
     font-style: normal;
     font-size: 24px;
     color: #5E5E5E;
-    /*float: right;*/
+    margin-left: 10px;
     margin-right: 20px;
     margin-bottom: 11px;
   }
@@ -153,7 +159,7 @@ body {
   .list .published {
     /*float: right;*/
     padding: 0;
-    margin: 25px 20px 0 0;
+    margin: 25px 20px 0 10px;
     width: 100%;
     /*clear: both;*/
     font-family: 'Arial Bold', 'Arial';
@@ -176,6 +182,43 @@ body {
     display:none;
   }
 
+  .show iframe {
+    width: 70%;
+    height: 200px;
+  }
+
+  .show .title {
+    margin-left: 20px;
+    margin-top: 18px;
+    width: 480px;
+    height: 28px;
+    font-family: 'Helvetica Bold', 'Helvetica';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 24px;
+    color: #5E5E5E;
+  }
+
+  .show .published {
+    margin-left: 20px;
+    width: 480px;
+    height: 26px;
+    font-family: 'Arial Bold', 'Arial';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 15px;
+    color: #868686;
+    line-height: 26px;
+  }
+
+  .show .description {
+    margin-top: 0px;
+    width: 57%;
+    height: 156px;
+    font-size: 15px;
+    color: #868686;
+    line-height: 26px;
+  }
 }
 
 
@@ -243,5 +286,44 @@ body {
     font-size: 15px;
     color: #868686;
     line-height: 26px;
+  }
+
+  .show iframe {
+    width: 40%;
+    height: 294px;
+  }
+
+  .show .title {
+    margin-left: 20px;
+    margin-top: 18px;
+    width: 480px;
+    height: 28px;
+    font-family: 'Helvetica Bold', 'Helvetica';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 24px;
+    color: #5E5E5E;
+  }
+
+  .show .published {
+    margin-left: 20px;
+    width: 480px;
+    height: 26px;
+    font-family: 'Arial Bold', 'Arial';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 15px;
+    color: #868686;
+    line-height: 26px;
+  }
+
+  .show .description {
+    margin-top: 0px;
+    width: 57%;
+    height: 156px;
+    font-size: 15px;
+    color: #868686;
+    line-height: 26px;
+    float: right;
   }
 }
