--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
   margin: 0px;
 }
 
+.list:focus {
+  background: blue;
+}
+
 button {
   margin-left: 18px;
   text-decoration: underline;
@@ -320,6 +324,7 @@ button {
     font-size: 15px;
     color: #868686;
     line-height: 26px;
+    display: block;
   }
 
   .show iframe {
@@ -362,7 +367,7 @@ button {
   }
 
 
-  main:hover {
+  .parentDiv:hover {
     filter: blur(0px);
   }
   .list {
@@ -372,20 +377,12 @@ button {
      filter: blur(5px);
   }
 
-main:hover > .list {
-  filter: blur(3px);
+.parentDiv:hover > .list {
+  filter: blur(5px);
 }
 
-main:hover > .list:hover {
+.parentDiv:hover > .list:hover {
   filter: blur(0px);
 }
-/*
-.childDiv {
-  border: 1px solid black;
-  overflow: auto;
-}*/
 
-/*main:hover {
-  background: blue;
-}*/
 }
