--- a/src/css/style.css
+++ b/src/css/style.css
@@ -365,7 +365,7 @@ button {
     line-height: 26px;
     float: right;
   }
-
+/*
 
   .parentDiv:hover {
     filter: blur(0px);
@@ -383,6 +383,6 @@ button {
 
 .parentDiv:hover > .list:hover {
   filter: blur(0px);
-}
+}*/
 
 }
