--- a/src/oldcss/style.css
+++ b/src/oldcss/style.css
@@ -39,7 +39,7 @@ button {
   }
 }
 
-@media only screen and (min-width: 481px) {
+@media only screen and (min-width: $break-small) {
    .col-m-7 {width: 58.33%;
   min-width: 404.05px}
    .col-m-8 {width: 66.66%;}
@@ -47,7 +47,7 @@ button {
    .col-m-10 {width: 83.33%;}
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: $break-large) {
   .col-l-7 {width: 58.33%;}
   .col-8 {width: 66.66%;}
 }
