--- a/src/scss/pages/_list.scss
+++ b/src/scss/pages/_list.scss
@@ -4,6 +4,9 @@
   height: 270px;
   margin-bottom: 10px;
   cursor: pointer;
+  @media only screen and (min-width: 481px) {
+     min-width: 411px;
+   }
 
   &:focus {
     background: blue;
