--- a/src/scss/pages/_list.scss
+++ b/src/scss/pages/_list.scss
@@ -1,89 +1,95 @@
 .list {
   border: 1px solid #d0d0d0;
   width: 85%;
-  height: 270px;
+  height: 280px;
   margin-bottom: 10px;
   cursor: pointer;
+  list-style: none;
+  padding: 0;
   @media only screen and (min-width: 481px) {
-     min-width: 411px;
-   }
+    min-width: 411px;
+  }
 
   &:focus {
-    background: blue;
+    outline-color: $primary-color;
   }
 
-  .description {
-    @media screen and (max-width: $break-small){
-      display: none;
+  &__item{
+    &--title {
+      margin-left: 15px;
+      margin-top: 10px;
+      width: 300px;
+      height: 17px;
+      font-family: 'Arial Bold',Arial;
+      font-weight: 700;
+      font-style: normal;
+      font-size: 1.125em;
+      color: #5e5e5e;
+      line-height: 20px;
+
+      @media screen and (min-width: $break-large) {
+        width: 41%;
+        height: 25px;
+        font-size: 24px;
+        float: right;
+        margin-bottom: 11px;
+        clear: both;
+      }
     }
-    @media screen and (max-width: $break-large) {
-      display: none;
-    }
-    @media screen and (min-width: $break-large) {
-      float: right;
-      margin: 25px 0 0 0;
-      padding: 0;
-      width: 41%;
-      clear: both;
+
+    &--published {
+      margin-left: 15px;
+      margin-top: 21px;
+      width: 280px;
+      margin-bottom: 11px;
+      height: 8px;
+      font-family: 'Arial Bold',Arial;
+      font-weight: 700;
+      font-style: normal;
       font-size: 15px;
       color: #868686;
-      line-height: 26px;
-      display: block;
-
+      line-height: 5px;
+      @media screen and (min-width: $break-large) {
+        float: right;
+        padding: 0;
+        margin: 10px 0 0 0;
+        width: 41%;
+        clear: both;
+        line-height: 26px;
+      }
     }
-  }
 
-  img {
-    width: 95%;
-    height: 70%;
-    margin-left: 9px;
+    &--description {
+      @media screen and (max-width: $break-small){
+        display: none;
+      }
+      @media screen and (max-width: $break-large) {
+        display: none;
+      }
+      @media screen and (min-width: $break-large) {
+        float: right;
+        margin: 25px 0 0 0;
+        padding: 0;
+        width: 41%;
+        clear: both;
+        font-size: 15px;
+        color: #868686;
+        line-height: 26px;
+        display: block;
+
+      }
+    }
+
+    &--img {
+      width: 91%;
+      height: 210px;
+      margin-left: 15px;
       @media screen and (min-width: $break-large) {
         width: 55%;
-        height: 92%;
+        height: 260px;
         margin-left: 10px;
         margin-top: 10px;
       }
-  }
-
-  .title {
-    margin-left: 9px;
-    width: 300px;
-    height: 17px;
-    font-family: 'Arial Bold', 'Arial';
-    font-weight: 700;
-    font-style: normal;
-    font-size: 1.125em;
-    color: #5E5E5E;
-    line-height: 20px;
-
-    @media screen and (min-width: $break-large) {
-      width: 41%;
-      height: 25px;
-      font-size: 24px;
-      float: right;
-      margin-bottom: 11px;
-      clear: both;
-    }
-  }
-
-  .published {
-    margin-left: 9px;
-    margin-top: 25px;
-    width: 280px;
-    height: 8px;
-    font-family: 'Arial Bold', 'Arial';
-    font-weight: 700;
-    font-style: normal;
-    font-size: 15px;
-    color: #868686;
-    line-height: 5px;
-    @media screen and (min-width: $break-large) {
-      float: right;
-      padding: 0;
-      margin: 10px 0 0 0;
-      width: 41%;
-      clear: both;
-      line-height: 26px;
     }
   }
 }
