--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -20,6 +20,15 @@ button {
   line-height: 26px;
   cursor: pointer;
   padding: 20px 0 33px 0;
+
+  &:focus {
+    outline-color: $primary-color;
+  }
+
+  @-moz-document url-prefix() {
+    outline: 3px solid $primary-color;
+  }
+
 }
 
 .playlist-text {
