editing tab navigation to work with firefox and safari

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -5,6 +5,12 @@ body {
   background: white;
 }
 
+.parentDiv {
+  height: 100vh;
+  width: 100%;
+  // margin-bottom: 15px;
+}
+
 button {
   margin-left: 18px;
   text-decoration: underline;
