--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,12 +1,11 @@
 body {
-  font-family: Arial;
+  font-family: 'Spinnaker', sans-serif;
   margin: 0px;
-  // background: black;
   background: white;
 }
 
 .parentDiv {
-  height: 100vh;
+  // height: 100vh;s
   width: 100%;
   // margin-bottom: 15px;
 }
@@ -17,7 +16,6 @@ button {
   border: none;
   background: none;
   height: 26px;
-  font-family: 'Arial Bold', 'Arial';
   font-weight: 700;
   font-style: normal;
   font-size: 15px;
@@ -29,12 +27,11 @@ button {
 
   &:focus {
     outline-color: $primary-color;
-  }
 
-  @-moz-document url-prefix() {
-    outline: 3px solid $primary-color;
+    @-moz-document url-prefix() {
+      outline: 3px solid $primary-color;
+    }
   }
-
 }
 
 .playlist-text {
@@ -96,7 +93,6 @@ button {
   margin: 0 0 10px 0;
   width: 100%;
   height: 216px;
-  font-family: 'Helvetica Bold',Helvetica;
   font-weight: 700;
   font-style: normal;
   font-size: 25px;
