--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,13 +1,14 @@
 body {
-  font-family: 'Spinnaker', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
   margin: 0px;
-  background: white;
+  background: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .parentDiv {
-  // height: 100vh;s
   width: 100%;
-  // margin-bottom: 15px;
 }
 
 button {
@@ -90,21 +91,21 @@ button {
 
   // COLOUR OPTION
 
-  margin: 0 0 10px 0;
-  width: 100%;
-  height: 216px;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 25px;
-  color: $primary-color;
-  background: url(../images/alice-moore.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-  line-height: 18;
-  border-bottom: 8px solid $primary-color;
-  padding: 20px;
+  // margin: 0 0 10px 0;
+  // width: 100%;
+  // height: 216px;
+  // font-weight: 700;
+  // font-style: normal;
+  // font-size: 25px;
+  // color: $primary-color;
+  // background: url(../images/alice-moore.jpg);
+  // background-repeat: no-repeat;
+  // background-position: center;
+  // background-attachment: fixed;
+  // background-size: cover;
+  // line-height: 18;
+  // border-bottom: 8px solid $primary-color;
+  // padding: 20px;
   // background-attachment: fixed;
 
   @media only screen and (min-width: 481px) {
