--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,10 +1,20 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
-  margin: 0px;
-  background: #fff;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  background: #fafafa;
+  color: #333;
+  @include fontSmoothing();
+}
+
+.header {
+  padding: 10px;
+  background: #333577;
+  color: #fff;
+
+  &__heading {
+    margin-left: 20px;
+  }
 }
 
 button {
@@ -29,104 +39,4 @@ button {
       outline: 3px solid $primary-color;
     }
   }
-}
-
-.playlist-text {
-  // margin-left: 9px;
-  // margin-top: 10px;
-  // width: 100%;
-  // height: 29px;
-  // font-family: 'Helvetica Bold', 'Helvetica';
-  // font-weight: 700;
-  // font-style: normal;
-  // font-size: 24px;
-  // color: #5E5E5E;
-  // background: url('../images/music.jpg') no-repeat center center fixed;
-  // background-size: cover;
-
-
-  //  BLACK AND WHITE OPTION
-
-
-  // margin: 0 0 10px 0;
-  // width: 100%;
-  // height: 216px;
-  // font-family: 'Helvetica Bold',Helvetica;
-  // font-weight: 700;
-  // font-style: normal;
-  // font-size: 25px;
-  // color: #d0d0d0;
-  // background: url(../images/alice-moore.jpg);
-  // background-repeat: no-repeat;
-  // background-size: contain;
-  // background-position: center;
-  // background-size: cover;
-  // line-height: 18;
-  // border-bottom: 8px solid #d0d0d0;
-  // padding: 20px;
-  //
-  // @media only screen and (min-width: 481px) {
-  //
-  //   margin: 0 0 10px 0;
-  //   width: 100%;
-  //   height: 345px;
-  //   font-family: 'Helvetica Bold',Helvetica;
-  //   font-weight: 700;
-  //   font-style: normal;
-  //   font-size: 40px;
-  //   color: #d0d0d0;
-  //   background: url(../images/alice-moore.jpg) no-repeat center center fixed;
-  //   background-position-y: -231px;
-  //   background-position-x: 222px;
-  //   background-size: cover;
-  //   line-height: 17;
-  //   padding-left: 45px;
-  //   border-bottom: 8px solid #d0d0d0;
-  // }
-
-
-  // COLOUR OPTION
-
-  // margin: 0 0 10px 0;
-  // width: 100%;
-  // height: 216px;
-  // font-weight: 700;
-  // font-style: normal;
-  // font-size: 25px;
-  // color: $primary-color;
-  // background: url(../images/alice-moore.jpg);
-  // background-repeat: no-repeat;
-  // background-position: center;
-  // background-attachment: fixed;
-  // background-size: cover;
-  // line-height: 18;
-  // border-bottom: 8px solid $primary-color;
-  // padding: 20px;
-  // background-attachment: fixed;
-
-  @media only screen and (min-width: 481px) {
-    height: 345px;
-    font-size: 40px;
-    color: $primary-color;
-    line-height: 17;
-    padding-left: 45px;
-    border-bottom: 8px solid $primary-color;
-  }
-}
-
-footer {
-  background: url(../images/pink.png);
-  // bottom: 0px;
-  background-repeat: no-repeat;
-  // background-attachment: fixed;
-  background-size: cover;
-  border-top: 7px solid $primary-color;
-  // height: 110px;
-  // width: 100%;
-
-  position:fixed;
-  left:0px;
-  bottom:0px;
-  height:30px;
-  width:100%;
 }
